--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,16 +1,15 @@
-# ---- Stage: Run the Node.js backend ----
 FROM node:18-alpine
 
 WORKDIR /app
 
-# Copy package files and install only production deps
 COPY package*.json ./
 RUN npm ci --omit=dev
 
-# Copy rest of backend code
 COPY . .
 
-# Expose your backend port (usually 8000 or 5000)
+ARG CORS_ORIGIN
+ENV CORS_ORIGIN=$CORS_ORIGIN
+
 EXPOSE 8000
 
 # Start the server
